--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 <div id="choropleth_map"></div>
 
 <h2>This is the second visualisation</h2>
-<div id="scatter_plot"></div>
+<div id="bar_chart"></div>
 
 <script type="text/javascript">
   
@@ -29,9 +29,9 @@
     // Access the Vega view instance (https://vega.github.io/vega/docs/api/view/) as result.view
   }).catch(console.error);
   
-  var vis2 = "js/scatter_plot_interactive.vg.json";
+  var vis2 = "js/bar_chart_interactive.vg.json";
   
-  vegaEmbed('#scatter_plot', vis2).then(function(result) {
+  vegaEmbed('#bar_chart', vis2).then(function(result) {
     // Access the Vega view instance (https://vega.github.io/vega/docs/api/view/) as result.view
   }).catch(console.error);
 </script>
